--- a/9.0/apache/Dockerfile
+++ b/9.0/apache/Dockerfile
@@ -39,21 +39,27 @@ RUN set -ex \
 	&& docker-php-ext-enable apcu memcached redis
 
 ENV OWNCLOUD_VERSION 9.0.4
-VOLUME /var/www/html
+VOLUME /var/www/html/data
 
-RUN curl -fsSL -o owncloud.tar.bz2 \
-		"https://download.owncloud.org/community/owncloud-${OWNCLOUD_VERSION}.tar.bz2" \
-	&& curl -fsSL -o owncloud.tar.bz2.asc \
-		"https://download.owncloud.org/community/owncloud-${OWNCLOUD_VERSION}.tar.bz2.asc" \
-	&& export GNUPGHOME="$(mktemp -d)" \
+RUN cd /root/ \
+    && curl -fsSL -o owncloud.tar.bz2 \
+        "https://download.owncloud.org/community/owncloud-${OWNCLOUD_VERSION}.tar.bz2" \
+    && curl -fsSL -o owncloud.tar.bz2.asc \
+        "https://download.owncloud.org/community/owncloud-${OWNCLOUD_VERSION}.tar.bz2.asc" \
+    && export GNUPGHOME="$(mktemp -d)" \
 # gpg key from https://owncloud.org/owncloud.asc
-	&& gpg --keyserver ha.pool.sks-keyservers.net --recv-keys E3036906AD9F30807351FAC32D5D5E97F6978A26 \
-	&& gpg --batch --verify owncloud.tar.bz2.asc owncloud.tar.bz2 \
-	&& rm -r "$GNUPGHOME" owncloud.tar.bz2.asc \
-	&& tar -xjf owncloud.tar.bz2 -C /usr/src/ \
-	&& rm owncloud.tar.bz2
+    && gpg --keyserver ha.pool.sks-keyservers.net --recv-keys E3036906AD9F30807351FAC32D5D5E97F6978A26 \
+    && gpg --batch --verify owncloud.tar.bz2.asc owncloud.tar.bz2 \
+    && rm -r "$GNUPGHOME" owncloud.tar.bz2.asc \
+    && rmdir /var/www/html/ \
+    && tar xf owncloud.tar.bz2 -C /var/www/ \
+    && mv /var/www/owncloud /var/www/html \
+    && rm owncloud.tar.bz2 \
+    && mkdir /var/www/html/data \
+    && mkdir /srv/shares/ \
+    && ln -s /var/www/html/data/config.php /var/www/html/config/ \
+    && chown -R www-data /var/www/html
 
-COPY docker-entrypoint.sh /entrypoint.sh
 
-ENTRYPOINT ["/entrypoint.sh"]
 CMD ["apache2-foreground"]
+
