--- a/9.0/apache/Dockerfile
+++ b/9.0/apache/Dockerfile
@@ -57,7 +57,7 @@ RUN cd /root/ \
     && mkdir /var/www/html/data \
     && mkdir /srv/shares/ \
     && ln -s /var/www/html/data/config.php /var/www/html/config/ \
-    && chown -R www-data /var/www/html
+    && chown -R www-data /var/www/html \
     && usermod -s /bin/sh www-data
 
 VOLUME /var/www/html/data
